# aws_intro

./: .env_example  example.py  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json  init.sh
src/aws_intro/: example.py
