[tool.poetry]
name = "aws-intro"
version = "0.1.0"
description = "AWS cli & boto3 basics"
authors = ["SzymonJakubiak <szymonjakubiak@gmail.com>"]
readme = "README.md"
packages = [{include = "aws_intro"}]

[tool.poetry.dependencies]
python = "^3.8"


[tool.poetry.group.dev.dependencies]
black = "^22.8.0"
flake8 = "^5.0.4"
isort = "^5.10.1"

[tool.isort]
profile = "black"

[tool.black]
line-length = 99

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
